# egui-stylist

./: Cargo.toml
egui-stylist/: Cargo.toml
egui-stylist-native/: Cargo.toml
egui-stylist/src/views/: colors.rs  fonts.rs  shape.rs  text.rs
egui-stylist/src/views/preview/: widget_gallery.rs
egui-theme/: Cargo.toml
egui-theme/src/tests/: de.rs  ser.rs
egui-theme/src/theme/: style.rs
