[workspace]
members = ["egui-stylist", "egui-theme"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]
egui = { git = "https://github.com/fornwall/egui", branch = "master" }
egui_plot = { git = "https://github.com/fornwall/egui", branch = "master" }